# metasonic-bridge

./: .gitignore  .gitmodules  ARCHITECTURE.md  LICENSE  README.md  ROADMAP.md  justfile  metasonic-bridge.cabal  package.yaml  stack.yaml
.github/workflows/: deploy.yml
app/: Main.hs
blog/: CHANGELOG.md  README.md  archive.html  index.html  metasonic-blog.cabal  site.hs  stack.yaml
blog/css/: default.css
blog/posts/: 2026-03-25-design-notes-from-puckette.md  2026-03-26-what-sapf-can-teach-metasonic.md  2026-03-30-inside_q_lib_how_it_works.md  2026-04-15-tui-inspector.md
blog/templates/: archive.html  default.html  post-list.html  post.html
cbits/: rt_graph.cpp  rt_graph.h
src/MetaSonic/: Compile.hs  FFI.hs  IR.hs  Source.hs  Types.hs  Validate.hs
src/MetaSonic/Bridge/: IR.hs  Source.hs
src/MetaSonic/Visualize/: TUI.hs  Trace.hs
tinysynth/: rt_graph.cpp
